--- a/jsp/permanencia/seguimiento/reportes.html
+++ b/jsp/permanencia/seguimiento/reportes.html
@@ -155,7 +155,7 @@
                 data: [1, 2],
             }, {
                 type: 'line',
-                label: 'Line Dataset',
+                label: 'Media',
                 fill: false,
                 data: [1, 1],
                 order: 1,
@@ -516,7 +516,7 @@
 
     <!-- jQuery -->
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>-->
-    <script src="../../../../components/jquery/dist/jquery.min.js"></script>
+    <script src="../../../components/jquery/dist/jquery.min.js"></script>
     <script>
         //paste this code under the head tag or in a separate js file.
         // Wait for window load
